; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_set_blocksize.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_set_blocksize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32)* }
%struct.vnode = type { i32 }

@nblkdev = common dso_local global i64 0, align 8
@bdevsw = common dso_local global %struct.TYPE_2__* null, align 8
@DEV_BSIZE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vnode*, i32)* @set_blocksize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_blocksize(%struct.vnode* %0, i32 %1) #0 {
  %3 = alloca %struct.vnode*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32 (i32)*, align 8
  %6 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @major(i32 %7)
  %9 = load i64, i64* @nblkdev, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %35

11:                                               ; preds = %2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @bdevsw, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @major(i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (i32)*, i32 (i32)** %16, align 8
  store i32 (i32)* %17, i32 (i32)** %5, align 8
  %18 = icmp ne i32 (i32)* %17, null
  br i1 %18, label %19, label %35

19:                                               ; preds = %11
  %20 = load i32 (i32)*, i32 (i32)** %5, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 %20(i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = icmp sle i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load i8*, i8** @DEV_BSIZE, align 8
  %27 = ptrtoint i8* %26 to i32
  %28 = load %struct.vnode*, %struct.vnode** %3, align 8
  %29 = getelementptr inbounds %struct.vnode, %struct.vnode* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  br label %34

30:                                               ; preds = %19
  %31 = load i32, i32* %6, align 4
  %32 = load %struct.vnode*, %struct.vnode** %3, align 8
  %33 = getelementptr inbounds %struct.vnode, %struct.vnode* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  br label %34

34:                                               ; preds = %30, %25
  br label %40

35:                                               ; preds = %11, %2
  %36 = load i8*, i8** @DEV_BSIZE, align 8
  %37 = ptrtoint i8* %36 to i32
  %38 = load %struct.vnode*, %struct.vnode** %3, align 8
  %39 = getelementptr inbounds %struct.vnode, %struct.vnode* %38, i32 0, i32 0
  store i32 %37, i32* %39, align 4
  br label %40

40:                                               ; preds = %35, %34
  ret void
}

declare dso_local i64 @major(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
